--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "immutable": "^3.8.2",
     "react-native-easy-toast-fixed": "^1.0.2",
     "react-native-xml2js": "^1.0.3",
-    "rn-textinputlayout": "^1.0.5"
+    "rn-textinputlayout": "^1.0.5",
+    "md5": "^2.2.1",
+    "react-native-crypto-js": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
