--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
+    "immutable": "^3.8.2",
+    "md5": "^2.2.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-easy-toast-fixed": "^1.0.2",
+    "react-native-snackbar": "^0.5.5",
+    "react-native-xml2js": "^1.0.3",
     "react-navigation": "^2.18.2",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1",
@@ -18,12 +24,8 @@
     "redux-persist": "^5.10.0",
     "redux-persist-transform-immutable": "^5.0.0",
     "redux-thunk": "^2.3.0",
-    "immutable": "^3.8.2",
-    "react-native-easy-toast-fixed": "^1.0.2",
-    "react-native-xml2js": "^1.0.3",
     "rn-textinputlayout": "^1.0.5",
-    "md5": "^2.2.1",
-    "react-native-crypto-js": "^1.0.0"
+    "react-native-snackbar-component": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
